# KnowledgeCrawler

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  cbuildrel
.gitea/workflows/: ci.yml
.github/workflows/: ci.yml
.jenkins/: jenkinsfile
src/: CMakeLists.txt  appcontext.cpp  appcontext.hpp  config.cpp  config.hpp  const.hpp  logging.cpp  logging.hpp  main.cpp
src/fs/: FileEntry.cpp  FileEntry.hpp  fs.cpp  fs.hpp
src/image/: img.cpp  img.hpp
src/net/: http.cpp  http.hpp  ntfy.cpp  ntfy.hpp
src/parse/: FileContext.cpp  FileContext.hpp  FileContextCache.cpp  FileContextCache.hpp  Link.cpp  Link.hpp
src/print/: print.cpp  print.hpp
src/task/: current_tasks.cpp  current_tasks.hpp  task.cpp  task.hpp
src/valid/: link.cpp  link.hpp
